Fix Canvas flicker for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,5 @@
   right:0;
   /* display: none; */
 }
+
+* { -webkit-tap-highlight-color:rgba(0,0,0,0); }
